# pdfplucker

./: .gitignore  LICENSE.txt  README.md  __init__.py  cli.py  processor.py  pyproject.toml  requirements.txt  setup.py  utils.py
.github/workflows/: python-publish.yml  release.yaml  release.yml
pdf_parser.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
pdf_processor/: __init__.py
pdfplucker/: __init__.py  cli.py  core.py  processor.py  teste.ipynb  utils.py
pdfplucker/.ipynb_checkpoints/: teste-checkpoint.ipynb  utils-checkpoint.py
results/: final_metrics.json
src/: __init__.py  cli.py  processor.py  utils.py
src/results/: Downloads_metrics.json  Lista de Exercicio 01 - LE01 - SegComp.json
