[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pdfplucker"
version = "0.3.2"
description = "Docling wrapper for PDF parsing"
authors = [ { name = "Rafael Ghiorzi", email = "rafael.ghiorzi@gmail.com" } ]
maintainers = [ { name = "Rafael Ghiorzi", email = "rafael.ghiorzi@gmail.com" } ]
keywords = [
    "docling",
    "pdf",
    "ocr",
    "parser"
]
license = { file = "LICENSE" }
readme = "README.md"
repository = "https://github.com/rafaelghiorzi/pdfplucker"
packages = [
    { include = "pdfplucker" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Operating System :: Microsoft :: Windows"
]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
docling = "^2.30.0"
PyMuPDF = "^1.25.5"
rapidocr_onnxruntime = "^1.4.4"
onnxruntime_gpu = { version = ">=1.21.0", optional = true }

[tool.poetry.extras]
gpu = ["onnxruntime_gpu"]

[tool.poetry.group.dev.dependencies]
setuptools = "^78.1.0"

[tool.poetry.scripts]
pdfplucker = "pdfplucker.cli:main"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/rafaelghiorzi/pdfplucker/issues"
